# fastapi-scheduler

./: .flake8  .gitignore  README.md  pyproject.toml
fastapi_scheduler/: __init__.py  admin.py
fastapi_scheduler/locale/zh_CN/LC_MESSAGES/: messages.mo  messages.po
